# xstatic-angular-ui-router

./: .gitignore  .gitreview  MANIFEST.in  README.txt  setup.cfg  setup.py
xstatic/pkg/angular_ui_router/: __init__.py
xstatic/pkg/ui_router/: __init__.py
