[metadata]
name = XStatic-angular-ui-router
summary = angular-ui-router 0.3.1 (XStatic packaging standard)
description-file = README.rst
maintainer = Richard Jones
maintainer-email = r1chardj0n3s@gmail.com
home-page = https://github.com/angular-ui/ui-router
keywords = angular ui-router xstatic
license = (same as angular-ui-router)
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
